# pawinhand-clone

./: AGENTS.md  PROGRESS.md  PROGRESS_A.md  PROGRESS_B.md  README.md
backend/: main.py  pyproject.toml
backend/app/: config.py  logger.py  rag.py  schemas.py
backend/app/routers/: application.py  diagnose.py  match.py  questions.py  votes.py
backend/app/services/: ai_diagnose.py  ai_matching.py
backend/data/: name_votes.json
backend/scripts/: crawl_pawinhand.py
data/: animals.json
frontend/app/: layout.js  page.js
frontend/app/animals/: page.js
frontend/app/animals/[id]/: page.js
frontend/app/api/map-svg/: route.js
frontend/app/care/: page.js
frontend/app/components/: AnimalCard.js  Header.js  Skeleton.js
frontend/app/data/: shelters.js
frontend/app/diagnose/: page.js
frontend/app/map/: page.js
frontend/app/match/results/: page.js
frontend/app/shelter-questionnaire/: page.js
frontend/public/data/: care_products.json
frontend/src/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  list.html
